<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ui_okay">Okay</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_error">Error</string>
    <string name="ui_na">Not Applicable</string>
    <string name="ui_caution">Caution</string>
    <string name="ui_reset">Reset</string>
    <string name="ui_not_support">Not supported</string>
    <string name="ui_not_support_android_version">Only support Android %1$s+</string>
    <string name="dialog_feature_na_message">Your Android device does not have this feature, or this feature may be using by other apps.</string>
    <string name="dialog_permission_denied_message">Without granting permissions, it will probably not work.\n\nPlease grant the permissions to access this feature.</string>
    <string name="dialog_permission_denied_posbtn">Settings</string>

    <string name="pref_category_more">App Information</string>
    <string name="pref_category_general">General</string>
    <string name="version">Version</string>
    <string name="about_navbtn">OK</string>
    <string name="report">Feedback</string>
    <string name="report_title">Ringtone Randomizer: Report and Feedback</string>
    <string name="report_subject">Here is my message: \n</string>
    <string name="report_des" />
    <string name="qanda">FAQ</string>
    <string name="qanda_message">Q. Why did not the app change ringtone while incoming call?\n\n
        A. Please read the follow notes: \n\n
        1. Try to enable the Notification in setting. There will be pop-up error message while next incoming call if app\'s error occurs. Please report this to us.\n
        \n
        2. Do not open this app during the USB MASS STORAGE Mode, otherwise you may lose the ringtone list.\n
        \n
        3. Do not kill this app and stop the service.\n
        \n
        4. Do not move app to sdcard (Move2SD).\n
</string>
    <!--  -->
    <string name="app_name">Ringtone Randomizer</string>
    <string name="title_activity_choose">Add ringtones</string>
    <string name="addto_button">Add</string>
    <string name="filter_button">Filter</string>
    <string name="done">Done.</string>
    <string name="add_button">Add</string>
    <string name="changed_ringtone">Ringtone was changed successfully.</string>
    <string name="changed_ringtone_one">You have only one selected ringtone. Add more ringtones to make it randomize.</string>
    <string name="setting">Setting</string>
    <string name="action_iap">Ad Remove</string>
    <!--  -->
    <string name="filter_title">Filter File Path:</string>
    <string name="clear_title">Caution</string>
    <string name="clear_message">Are you sure to clear ALL selected ringtones?</string>
    <string name="clear_navbtn">No</string>
    <string name="clear_posbtn">Yes</string>
    <string name="clear_done">Done.</string>
    <string name="item_title">Ringtone Information</string>
    <string name="item_message">File Name: </string>
    <string name="item_message2">File Path: </string>
    <string name="item_navbtn">Back</string>
    <string name="item_netbtn">Remove</string>
    <string name="item_posbtn">Change to this</string>
    <string name="item_done">Done.</string>
    <string name="playing_sound">Playing</string>
    <string name="playing_sound_fail">Error: Cannot play sound file.</string>
    <!--  -->
    <string name="update_title">Hi, mate.</string>
    <string name="update_message">Welcome to Ringtone Randomizer V2 with a new UI. 
        \n\nIf you come form previous version, we are sorry that you need to re-add the list since we change a whole app including fixing bugs.</string>
    <string name="update_navbtn">Okay</string>
    <!--  -->
    <string name="ringtone_main">Selected Ringtones</string>
    <string name="notyet">You have not yet added any ringtone into the list.</string>
    <string name="change_ringtone_result_permission">You have not yet granted permission.</string>
    <string name="share_message">Download "Ringtone Randomizer" to ring up your phone with different ringtones. That\'s sound smart!!/n/n
        https://play.google.com/store/apps/details?id=hibernate.v2.ringtonerandomizer</string>
    <string name="share_button">Share App to…</string>
    <string name="share">Share App</string>
    <string name="rate_title">Give developers some feedback</string>
    <string name="rate_message">Rate this app in Google Play to support developers. Contact developers if you have any questions.</string>
    <string name="rate_navbtn">No, thanks</string>
    <string name="rate_netbtn">Later on</string>
    <string name="rate_posbtn">RATE NOW</string>
    <string name="more_app">All developers\' App</string>
    <string name="wait">Loading…</string>
    <string name="press_to_stop">Press the item to stop music play.</string>
    <string name="iab_complete_message">Please restart the app to apply the change.</string>
    <string name="iab_complete_title">Thanks</string>
    <string name="current">Current Ringtone</string>
    <string name="ui_share">Share</string>

    <string name="shortcut_action_change">Change ringtone</string>
    <string name="shortcut_action_add">Add New</string>
    <string name="dual_sim_warning">May not support Dual Sims phone.</string>
    <string name="ui_more">More details</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>
    <string name="pref_title_changed_notification">Notification</string>
    <string name="pref_des_changed_notificationOn">Show the notification message while incoming call</string>
    <string name="pref_des_changed_notificationOff">No notification message shown while incoming call</string>

    <string name="pref_title_enable">Enable</string>
    <string name="pref_des_enableOn">Change the ringtone while incoming call.</string>
    <string name="pref_des_enableOff">Ringtone will not be changed while incoming call.</string>

    <string name="pref_title_dual_warning">Dual Sims Warning</string>

    <string name="pref_language">Language</string>
    <string name="pref_language_sum">Restart this app after changing the language.</string>
    <string name="app_not_found">No application found.</string>

    <string name="write_settings_permission_dialog_title">Allow to modifying system settings</string>
    <string name="write_settings_permission_dialog_content">Please click next to allow this app to modify system ringtone settings.</string>
    <string name="write_settings_permission_dialog_pos_btn">Next</string>

    <string-array name="pref_language_list_titles" translatable="false">
        <item>System default</item>
        <item>中文（正體）</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_language_list_values" translatable="false">
        <item>auto</item>
        <item>zh</item>
        <item>en</item>
    </string-array>

</resources>